@@ -396,6 +396,7 @@ pri file "libsys/s_ldexpf.c" __builtin_ldexpf(x = float, n=long) : r=float
 pri file "libsys/s_modf.c" __builtin_modff(x = float, p) : r=float
 pri file "libsys/powers.c" __builtin_expf(x = float) : r=float
 pri file "libsys/powers.c" __builtin_exp2f(x = float) : r=float
+pri file "libsys/powers.c" __builtin_exp10f(x = float) : r=float
 pri file "libsys/powers.c" __builtin_logf(x = float) : r=float
 pri file "libsys/powers.c" __builtin_log2f(x = float) : r=float
 pri file "libsys/powers.c" __builtin_log10f(x = float) : r=float
