@@ -3,6 +3,7 @@ Version 7.1.0
 - Reverted _rx* functions to no longer use 28 bit internal buffer; this is less resilient to P2 side timing changes, but better if PC timing is uncertain
 - Added new Spin2 @\"string" for strings with embedded C-style escapes
 - Added DITTO to duplicate code/data in Spin2 assembly
+- Added some of the upcoming Spin2 v51 float functions
 - Many internal changes to support DITTO and future assembly work
 - Updated -gbrk debug code (thanks Ada)
 - Use cluster size for stat() st_blksize on FAT32
